--- a/translations/docs+intl-icu.es.xlf
+++ b/translations/docs+intl-icu.es.xlf
@@ -1376,5 +1376,27 @@
         <target>Wenn aus Twinoid importiert, Ländercode + Season (zb "fr-12"); sonst leer.</target>
       </segment>
     </unit>
+    <unit id="_fLqtmV" name="Phase der Stadt; entweder &quot;alpha&quot;, &quot;beta&quot;, &quot;import&quot; oder &quot;native&quot;">
+      <notes>
+        <note category="german">Phase der Stadt; entweder "alpha", "beta", "import" oder "native"</note>
+        <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Phase der Stadt; entweder "alpha", "beta", "import" oder "native"</source>
+        <target>Phase der Stadt; entweder "alpha", "beta", "import" oder "native"</target>
+      </segment>
+    </unit>
+    <unit id="5F7mt2z" name="Herkunfts-Server der Stadt">
+      <notes>
+        <note category="german">Herkunfts-Server der Stadt</note>
+        <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Herkunfts-Server der Stadt</source>
+        <target>Herkunfts-Server der Stadt</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
