Translated bare hand title

--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -22739,7 +22739,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Barhändiger Stripper</source>
-        <target>Barhändiger Stripper</target>
+        <target>Bare-handed stripper</target>
       </segment>
     </unit>
     <unit id="RCyh4IV">
