--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22755,7 +22755,7 @@
       </notes>
       <segment>
         <source>Barhändiger Stripper</source>
-        <target>Barhändiger Stripper</target>
+        <target>Stripper con las manos desnudas</target>
       </segment>
     </unit>
     <unit id="RCyh4IV">
