--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22645,7 +22645,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Barhändiger Stripper</source>
-        <target>Barhändiger Stripper</target>
+        <target>Étripeur à mains nues</target>
       </segment>
     </unit>
     <unit id="RCyh4IV">
