--- a/translations/docs+intl-icu.es.xlf
+++ b/translations/docs+intl-icu.es.xlf
@@ -1351,7 +1351,7 @@
       </notes>
       <segment>
         <source>Beispiel, um nur die Informationen des Objekts „Wasserration“ wiederherzustellen:</source>
-        <target>Beispiel, um nur die Informationen des Objekts „Wasserration“ wiederherzustellen:</target>
+        <target>Ejemplo para restaurar solo la información del objeto "Ración de agua":</target>
       </segment>
     </unit>
     <unit id="stieGyi" name="Es wird angezeigt :">
@@ -1362,7 +1362,7 @@
       </notes>
       <segment>
         <source>Es wird angezeigt :</source>
-        <target>Es wird angezeigt :</target>
+        <target>Se mostrará:</target>
       </segment>
     </unit>
     <unit id="iNaLkw8" name="Wenn aus Twinoid importiert, Ländercode + Season (zb &quot;fr-12&quot;); sonst leer.">
@@ -1373,7 +1373,7 @@
       </notes>
       <segment>
         <source>Wenn aus Twinoid importiert, Ländercode + Season (zb "fr-12"); sonst leer.</source>
-        <target>Wenn aus Twinoid importiert, Ländercode + Season (zb "fr-12"); sonst leer.</target>
+        <target>Si se importa de Twinoid, código de país + temporada (por ejemplo, "es-10"); de lo contrario, vacío.</target>
       </segment>
     </unit>
     <unit id="_fLqtmV" name="Phase der Stadt; entweder &quot;alpha&quot;, &quot;beta&quot;, &quot;import&quot; oder &quot;native&quot;">
@@ -1384,7 +1384,7 @@
       </notes>
       <segment>
         <source>Phase der Stadt; entweder "alpha", "beta", "import" oder "native"</source>
-        <target>Phase der Stadt; entweder "alpha", "beta", "import" oder "native"</target>
+        <target>Fase del pueblo; ya sea "alfa", "beta", "importación" o "nativa"</target>
       </segment>
     </unit>
     <unit id="5F7mt2z" name="Herkunfts-Server der Stadt">
@@ -1395,7 +1395,7 @@
       </notes>
       <segment>
         <source>Herkunfts-Server der Stadt</source>
-        <target>Herkunfts-Server der Stadt</target>
+        <target>Servidor de origen del pueblo</target>
       </segment>
     </unit>
   </file>
